# weather-bot

./: Makefile  README.md  pyproject.toml
weather/: bot.py  main.py
weather/templates/: application.html  index.html  logs-all.html  logs.html  user-info.html
